style: avoid jumpy list while spinning

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,12 @@
 }
 
 ul {
+  padding: 0;
   list-style: none;
+}
+
+h2 {
+  min-height: 80px;
 }
 
 .isActive {
